--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -19,19 +19,27 @@
         <nav>
             <a>Main Designs Page</a>
             <a href="web_style_group_project.html">Group Project</a>
+            <a href="web_style_guide_mapping.html">Style Guide</a>
         </nav>
 
         <main>
             <p>Follow along for my Design Journal and planning for this portfolio</p>
 
             <p>
-                Current wireframe
+                Initial wireframe
                 <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Wireframe">
             </p>
 
             <p>
-                Web-Style Guide Group Project
+                Web-Style Guide Group Project<br>
                 <a href="web_style_group_project.html">View More...</a>
+            </p>
+
+            <p>
+                <h3>Web-Style Guide Mapping</h3>
+                Documentation of IxD process<br>
+                <a href="web_style_guide_mapping.html">View More...</a>
+                
             </p>
         </main>
 
