--- a/Designs/web_style_group_project.html
+++ b/Designs/web_style_group_project.html
@@ -18,6 +18,7 @@
         <nav>
             <a href="designs.html">Main Designs Page</a>
             <a>Group Project</a>
+            <a href="web_style_guide_mapping.html">Style Guide</a>
         </nav>
 
         <main>
