--- a/Designs/web_style_guide_mapping.html
+++ b/Designs/web_style_guide_mapping.html
@@ -15,7 +15,7 @@
             <a href="../Profile/profile.html">Profile</a>
         </header>
             <nav>
-                <a>Main Designs Page</a>
+                <a href="designs.html">Main Designs Page</a>
                 <a href="web_style_group_project.html">Group Project</a>
                 <a>Style Guide</a>
             </nav>
@@ -47,7 +47,7 @@
                             <li>Resume and profile (an about me section)</li>
                             <li>Contact information (contact info and links to professional profiles such as GitHub)</li>
                         </ul>
-                        (Alvaro Trigo\'s Blog, 2022)
+                        (Alvaro Trigo\'s Blog, 2022)<br>
 
                         <img src="../Images/Designs/Web_Style_Guide/blog_5_information_content.png" alt="Information content and how folders are structured">
                     </p>
@@ -63,17 +63,23 @@
                             The input controls would allow users to interact with my portfolio. <br>
                             This includes:
                                 <ul>
-                                <li>buttons to switch between pages and click on blog posts </li>
-                                <li>text fields to search</li>
-                                <li>The navigational components:</li>
-                                    § navigation bar, 
-                                    § links to sections on the website
-                                    § footer navigation, such as quick links to GitHub, and contact info
-                                    § Scrollbar
-                                    § Breadcrumb (letting users see their current location such as which page their on)
-                                The informational components: 
-                                    § Project cards will be used for blogs and essays (thumbnail image preview, title and short description, read more button linking to the page of the blog).
-                                    § Loaders (something creative to let the user know the system is completing an action in the background)  
+                                    <li>buttons to switch between pages and click on blog posts </li>
+                                    <li>text fields to search</li>
+                                    <li>The navigational components:
+                                        <ul>
+                                        <li> navigation bar </li>
+                                        <li>links to sections on the website</li>
+                                        <li>footer navigation, such as quick links to GitHub, and contact info</li>
+                                        <li>Scrollbar</li>
+                                        <li>Breadcrumb (letting users see their current location such as which page their on)</li>
+                                        </ul>
+                                    </li>
+                                <li> The informational components: 
+                                        <ul>
+                                        <li>Project cards will be used for blogs and essays (thumbnail image preview, title and short description, read more button linking to the page of the blog).</li>
+                                        <li>Loaders (something creative to let the user know the system is completing an action in the background)  </li>
+                                        </ul>
+                                    </li>
                                 </ul>
                         (CareerFoundry, 2019)
                     </p>
@@ -88,5 +94,9 @@
             </article>
         </main>
         
+        <a href="#">To the Top</a>
+        <footer>
+            Brought to you by Amina Moosa
+        </footer>
     </body>
 </html>
