--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -26,7 +26,9 @@
                     
                 </p>
                 <p>
-                    I'm Amina Moosa. A 3rd year Digital Arts student. Follow along for more updates on my web portfolio.
+                    I'm Amina Moosa. A 3rd year Digital Arts student at Wits. 
+                    I'm currently majoring in Game Design and Interactive Media.
+                    Follow along for more updates on my web portfolio.
                 </p>
         </main>
 
