--- a/Designs/web_style_guide_mapping.html
+++ b/Designs/web_style_guide_mapping.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Style Guide Mapping</title>
+    <meta name="author" content="Amina Moosa">
+    <meta name="description" content="Design Process and Documentation of IxD Process">
 </head>
     <body>
         <header>
@@ -89,6 +91,13 @@
                         <img src="../Images/Designs/Web_Style_Guide/1.png" alt="First image in the web style guide">
                         <img src="../Images/Designs/Web_Style_Guide/2.png" alt="Second image in the web style guide">
                         <img src="../Images/Designs/Web_Style_Guide/3.png" alt="Third image in the web style guide">
+                    </p>
+
+                    <p>
+                        <h3>References</h3>
+                        CareerFoundry. (2019). 32 UI Elements Designers Need To Know: 2025 Guide. [online] Available at: <a href="https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/"> https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/ </a>[Accessed 16 Mar. 2025]. <br>
+                        Fungies (2023). Short Guide to Building Game Designer Portfolio - Fungies.io. [online] Fungies.io - Sell digital products seamlessly. Available at: <a href="https://fungies.io/short-guide-to-building-game-designer-portfolio/">https://fungies.io/short-guide-to-building-game-designer-portfolio/ </a>[Accessed 2 Mar. 2025]. <br>
+                        Moritz Prätorius (2024). Game Designer Portfolio Website Examples (Best Of). [online] Slider Revolution. Available at:<a href="https://www.sliderrevolution.com/design/game-designer-portfolio-website/"> https://www.sliderrevolution.com/design/game-designer-portfolio-website/ </a>[Accessed 2 Mar. 2025].<br>
                     </p>
 
             </article>
