--- a/Designs/web_style_group_project.html
+++ b/Designs/web_style_group_project.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Web Style Guide Group</title>
+        <meta name="author" content="Amina Moosa">
+        <meta name="description" content="Web style guide group exercise displayed here">
     </head>
 
     <body>
