--- a/Designs/web_style_guide_mapping.html
+++ b/Designs/web_style_guide_mapping.html
@@ -94,6 +94,17 @@
                     </p>
 
                     <p>
+                        <h3>References Material</h3>
+                        <a href="https://colin-moy.webflow.io/?utm_source=google&utm_medium=search&utm_campaign=SS-GoogleSearch-Nonbrand-DynamicSearchAds-Tier4&utm_term=dsa-1729073412468___703207072719__">Colin Moy</a>
+                        Colin Moy's portfolio website is simplistic, creative and interactive. The creative ways to keep the user/viewer engaged. The one thing that I don't like the colour palette. <br>
+                        <a href="https://www.karliskah.com/">Karlis Kah</a>
+                        Kartliskah's portfolio is interactive and creative. I find creators who use interesting ways to keep the user engaged. The one thing I'm not very sure of is the footer, it's not very user friendly. <br>
+                        <a href="https://side-scroller-8d0b7d196792c04b8abe98e11.webflow.io/?utm_source=google&utm_medium=search&utm_campaign=SS-GoogleSearch-Nonbrand-DynamicSearchAds-Tier4&utm_term=dsa-1729073412468___703207072719__">‍Aaron Grieve'</a>
+                        Aaron's website something I don't happen to personally be fond of. It doesn't seem very user-friendly, and intuitive. The colour palette is very light, and contrasting but it's very harsh on the eyes. <br>
+
+                    </p>
+
+                    <p>
                         <h3>References</h3>
                         CareerFoundry. (2019). 32 UI Elements Designers Need To Know: 2025 Guide. [online] Available at: <a href="https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/"> https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/ </a>[Accessed 16 Mar. 2025]. <br>
                         Fungies (2023). Short Guide to Building Game Designer Portfolio - Fungies.io. [online] Fungies.io - Sell digital products seamlessly. Available at: <a href="https://fungies.io/short-guide-to-building-game-designer-portfolio/">https://fungies.io/short-guide-to-building-game-designer-portfolio/ </a>[Accessed 2 Mar. 2025]. <br>
