--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -26,9 +26,9 @@
         <main>
             <article>
                 <h1>Blog Post Week 2</h1>
-                    <h3>Reflecting "You Say You Want a Revolution? Hypertext and the Laws of Media" (2003) by Moulthrop and how it speak to the internet today </h3>
+                    <h3>Reflecting "<cite>You Say You Want a Revolution? Hypertext and the Laws of Media</cite>" (2003) by Moulthrop and how it speak to the internet today </h3>
                         <p> 
-                            "You Say You Want a Revolution? Hypertext and the Laws of Media" was an essay by Stuart Moulthrop originally published in 1991
+                            "<cite>You Say You Want a Revolution? Hypertext and the Laws of Media</cite>" was an essay by Stuart Moulthrop originally published in 1991
                             and then later included in the new Media Reader in 2003. Moulthrop's essay explores the concept of hypertext and it's potential
                             to revolutionize media and culture, which is DEFINITELY relevant to the Internet today. Moulthrop explores this concept through
                             the lens of Theodor Holm Nelson's vision of a universal hypertext system called Xanadu. 
@@ -69,7 +69,10 @@
                             Below is an image demonstrating my folder structure. The reason for this is to organize where content goes and 
                             to make it more readable on the URL. I used simple descriptive words and did not use any ASCII characters so that it would be easier 
                             to navigate through. <br>
-                            <img class="Folder" src="../Images/blog_week_2_FolderStructure001.png" alt="Folder structure">
+                            <figure>
+                                <figcaption>folder structure</figcaption>
+                                <img class="Folder" src="../Images/blog_week_2_FolderStructure001.png" alt="Folder structure">
+                            </figure>
                         </p>
 
                         <h3>Wireframe Ideas</h3>
@@ -77,28 +80,31 @@
                             I am thinking of having a Homepage/ Landing page (my index.html) really short and simple, then having pages for my designs showcasing my 
                             wireframe. A page for my essay, and all my essays present but if clicked on, will lead you to a page that contains the whole essay and well 
                             presented. A page to hold all my blogs, and a page leading to each blog to showcase the blog posts in their entirety.
-                            <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Low fedility Wireframe">
+                            <figure>
+                                <figcaption>Low fedility wireframe</figcaption>
+                                <img class="wireframe" src="../Images/blog_week_2_WireframePrototype001.jpg" alt="Low fedility Wireframe">
+                            </figure>
                         </p>
 
                         <h3>References to inspiration websites</h3>
                         <p>
-                            <a href="https://www.weareink.co.uk">https://www.weareink.co.uk</a>Links to an external site. <br>
+                            <a href="https://www.weareink.co.uk" class="u-url">https://www.weareink.co.uk</a>Links to an external site. <br>
 
-                            <a href="https://doubble.group/sg">https://doubble.group/sg </a>Links to an external site.<br>
+                            <a href="https://doubble.group/sg" class="u-url">https://doubble.group/sg </a>Links to an external site.<br>
 
-                            <a href="https://lfe.org">https://lfe.org </a>Links to an external site.<br>
+                            <a href="https://lfe.org" class="u-url">https://lfe.org </a>Links to an external site.<br>
 
-                            <a href="https://www.gubrica.com">https://www.gubrica.com </a>Links to an external site.<br>
+                            <a href="https://www.gubrica.com" class="u-url">https://www.gubrica.com </a>Links to an external site.<br>
 
-                            <a href="https://pinkmoon.co">https://pinkmoon.co</a> Links to an external site.<br>
+                            <a href="https://pinkmoon.co" class="u-url">https://pinkmoon.co</a> Links to an external site.<br>
                         </p>
                         
                         <h3>References</h3>
                         <p>
                             Moulthrop, S. (1991). You Say You Want a Revolution? Hypertext and the Laws of Media. Postmodern Culture, 1(3). 
-                            Available at: <a href="https://doi.org/10.1353/pmc.1991.0019"> https://doi.org/10.1353/pmc.1991.0019 </a> Links to an external site. [Accessed 24 Feb. 2025]. <br>
+                            Available at: <a href="https://doi.org/10.1353/pmc.1991.0019" class="u-url"> https://doi.org/10.1353/pmc.1991.0019 </a> Links to an external site. [Accessed 24 Feb. 2025]. <br>
                             Vieira, A. (2023). Baudrillard’s Theory and the Hyperreal World of Social Media - Armando Vieira. [online] Armando Vieira. 
-                            Available at: <a href="https://armandoscience.com/baudrillards-theory-and-the-hyperreal-world-of-social-media"> https://armandoscience.com/baudrillards-theory-and-the-hyperreal-world-of-social-media </a> Links to an external site. [Accessed 24 Feb. 2025].<br>
+                            Available at: <a href="https://armandoscience.com/baudrillards-theory-and-the-hyperreal-world-of-social-media" class="u-url"> https://armandoscience.com/baudrillards-theory-and-the-hyperreal-world-of-social-media </a> Links to an external site. [Accessed 24 Feb. 2025].<br>
                         </p>
             </article>
         </main>
