--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -91,7 +91,11 @@
                         They learn more about me in the "About Me" section for personal context, 
                         and have the contact section to reach out if they’re interested in collaboration or hiring.   
                     </p>
-                    <img src="../Images/blog_week_3_User Experience Flow.png" alt="User Experience Flow" > 
+                    <figure>
+                        <figcaption>User Experience Flow</figcaption>
+                        <img src="../Images/blog_week_3_User Experience Flow.png" alt="User Experience Flow" >
+                    </figure>
+                      
                     
                 <h4>USER INTERFACE ELEMENTS</h4>
                     <p>
@@ -129,20 +133,20 @@
                 <h4>References</h4>
                     <p>
                         Alvaro Trigo\'s Blog. (2022). How to Make Your Game Design Portfolio [+ 13 Examples] - Alvaro Trigo’s Blog. [online] 
-                        Available at: <a href="https://alvarotrigo.com/blog/game-design-portfolios"> https://alvarotrigo.com/blog/game-design-portfolios </a>Links to an external site. [Accessed 2 Mar. 2025]. <br>
+                        Available at: <a href="https://alvarotrigo.com/blog/game-design-portfolios" class="u-url"> https://alvarotrigo.com/blog/game-design-portfolios </a>Links to an external site. [Accessed 2 Mar. 2025]. <br>
                         Elementor. (2020). How To Create A Web Design Style Guide? Template & Examples. [online] 
-                        Available at: <a href="https://elementor.com/blog/web-design-style-guide"> https://elementor.com/blog/web-design-style-guide</a> Links to an external site. [Accessed 3 Mar. 2025]. <br>
+                        Available at: <a href="https://elementor.com/blog/web-design-style-guide" class="u-url"> https://elementor.com/blog/web-design-style-guide</a> Links to an external site. [Accessed 3 Mar. 2025]. <br>
                         Fungies (2023). Short Guide to Building Game Designer Portfolio - Fungies.io. [online] Fungies.io - Sell digital products seamlessly. 
-                        Available at: <a href="https://fungies.io/short-guide-to-building-game-designer-portfolio"> https://fungies.io/short-guide-to-building-game-designer-portfolio </a> Links to an external site. [Accessed 2 Mar. 2025]. <br>
+                        Available at: <a href="https://fungies.io/short-guide-to-building-game-designer-portfolio" class="u-url"> https://fungies.io/short-guide-to-building-game-designer-portfolio </a> Links to an external site. [Accessed 2 Mar. 2025]. <br>
                         Geyser, H. (2023) ‘Designing Interaction’, [Lecture], WSOA3028A: Interactive Media 3A, University of the Witwatersrand, [Accessed 2 Mar. 2025]. <br>
                         Moritz Prätorius (2024). Game Designer Portfolio Website Examples (Best Of). [online] Slider Revolution. 
-                        Available at: <a href="https://www.sliderrevolution.com/design/game-designer-portfolio-website"> https://www.sliderrevolution.com/design/game-designer-portfolio-website </a> Links to an external site. [Accessed 2 Mar. 2025]. <br>
+                        Available at: <a href="https://www.sliderrevolution.com/design/game-designer-portfolio-website" class="u-url"> https://www.sliderrevolution.com/design/game-designer-portfolio-website </a> Links to an external site. [Accessed 2 Mar. 2025]. <br>
                         Progress, in (2022). How to create your portfolio website. [online] Creative Lives In Progress. 
-                        Available at: <a href="https://creativelivesinprogress.com/articles/a-guide-to-creating-your-portfolio-website?section=How+to+make+your+website+a+reality"> https://creativelivesinprogress.com/articles/a-guide-to-creating-your-portfolio-website?section=How+to+make+your+website+a+reality </a> Links to an external site. [Accessed 3 Mar. 2025]. <br>
+                        Available at: <a href="https://creativelivesinprogress.com/articles/a-guide-to-creating-your-portfolio-website?section=How+to+make+your+website+a+reality" class="u-url"> https://creativelivesinprogress.com/articles/a-guide-to-creating-your-portfolio-website?section=How+to+make+your+website+a+reality </a> Links to an external site. [Accessed 3 Mar. 2025]. <br>
                         Romano, J. (2022). What Is a Website Structure and How Does It Impact UX? [online] Wix Blog. 
-                        Available at: <a href="https://www.wix.com/blog/website-structures"> https://www.wix.com/blog/website-structures </a> Links to an external site. [Accessed 3 Mar. 2025]. <br>
+                        Available at: <a href="https://www.wix.com/blog/website-structures" class="u-url"> https://www.wix.com/blog/website-structures </a> Links to an external site. [Accessed 3 Mar. 2025]. <br>
                         Team, T.U. (2024). Brand Style Guides: What They Are, With Top Brand Examples. [online] Upwork.com. 
-                        Available at: <a href="https://www.upwork.com/resources/brand-style-guides#brand-style-guide"> https://www.upwork.com/resources/brand-style-guides#brand-style-guide </a> Links to an external site. [Accessed 3 Mar. 2025]. <br>
+                        Available at: <a href="https://www.upwork.com/resources/brand-style-guides#brand-style-guide" class="u-url"> https://www.upwork.com/resources/brand-style-guides#brand-style-guide </a> Links to an external site. [Accessed 3 Mar. 2025]. <br>
                     </p>
                 </article>
             </main>
