--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -33,8 +33,14 @@
                             The main aesthetics of the website in this first iteration is a very blue-tech aesthetic. 
                             This is translated through the main colour palette and the fonts (Elementor, 2020). 
                             There are ideas and variations for some aspects in the style-guide:
-                            <img src="../Images/blog_week_4(01).png" alt="style guide img (1) showing fonts, moodboard inspiration and logo variations">
-                            <img src="../Images/blog_week_4(02).png" alt="style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website">
+                            <figure>
+                                <figcaption> style guide image (1) showing fonts, moodboard inspiration and logo variations</figcaption>
+                                <img src="../Images/blog_week_4(01).png" alt="style guide img (1) showing fonts, moodboard inspiration and logo variations">
+                            </figure>
+                            <figure>
+                                <figcaption> style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website</figcaption>
+                                <img src="../Images/blog_week_4(02).png" alt="style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website">
+                            </figure>
                         </p>
 
                     <h3>Defining my visual aesthetic:</h3>
@@ -82,7 +88,7 @@
                     <h3>References:</h3>
                         <p>
                             Elementor. (2020). How To Create A Web Design Style Guide? Template & Examples. [online] 
-                            Available at: <a href=" https://elementor.com/blog/web-design-style-guide"> https://elementor.com/blog/web-design-style-guide </a> Links to an external site. [Accessed 10 Mar. 2025]. <br>
+                            Available at: <a href=" https://elementor.com/blog/web-design-style-guide" class="u-url"> https://elementor.com/blog/web-design-style-guide </a> Links to an external site. [Accessed 10 Mar. 2025]. <br>
                         </p>
                 </article>
             </main>
