--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -22,7 +22,10 @@
         <main>
             <h1>About me</h1>
                 <p>
-                    <img src="../Images/profile_avatar.png" alt="A avatar of me" width="300" height="300">
+                    <figure>
+                        <figcaption>That's me!</figcaption>
+                        <img src="../Images/profile_avatar.png" alt="A avatar of me" width="300" height="300">
+                    </figure>
                     
                 </p>
                 <p>
