--- a/Designs/web_style_guide_mapping.html
+++ b/Designs/web_style_guide_mapping.html
@@ -51,12 +51,18 @@
                         </ul>
                         (Alvaro Trigo\'s Blog, 2022)<br>
 
-                        <img src="../Images/Designs/Web_Style_Guide/blog_5_information_content.png" alt="Information content and how folders are structured">
+                        <figure>
+                            <figcaption>Infomation contnt and how folders are structured</figcaption>
+                            <img src="../Images/Designs/Web_Style_Guide/blog_5_information_content.png" alt="Information content and how folders are structured">
+                        </figure>
                     </p>
                         
                     <p>
                         <h3>User Flow - Screens, Behaviour, and Decisions</h3>
-                        <img src="../Images/Designs/Web_Style_Guide/blog_5_information_user_experience.png" alt="User flow experience annotated">
+                        <figure>
+                            <figcaption>User Flow experience annotated</figcaption>
+                            <img src="../Images/Designs/Web_Style_Guide/blog_5_information_user_experience.png" alt="User flow experience annotated">
+                        </figure>
                     </p>
 
                     <p>
@@ -88,27 +94,36 @@
 
                     <p>
                         <h3>Style process documentation</h3>
-                        <img src="../Images/Designs/Web_Style_Guide/1.png" alt="First image in the web style guide">
-                        <img src="../Images/Designs/Web_Style_Guide/2.png" alt="Second image in the web style guide">
-                        <img src="../Images/Designs/Web_Style_Guide/3.png" alt="Third image in the web style guide">
+                        <figure>
+                            <figcaption>First image in the web style guide</figcaption>
+                            <img src="../Images/Designs/Web_Style_Guide/1.png" alt="First image in the web style guide">
+                        </figure>
+                        <figure>
+                            <figcaption>Second image in the web style guide</figcaption>
+                            <img src="../Images/Designs/Web_Style_Guide/2.png" alt="Second image in the web style guide">
+                        </figure>
+                        <figure>
+                            <figcaption>Third image in the web style guide</figcaption>
+                            <img src="../Images/Designs/Web_Style_Guide/3.png" alt="Third image in the web style guide">
+                        </figure>
                     </p>
 
                     <p>
                         <h3>References Material</h3>
-                        <a href="https://colin-moy.webflow.io/?utm_source=google&utm_medium=search&utm_campaign=SS-GoogleSearch-Nonbrand-DynamicSearchAds-Tier4&utm_term=dsa-1729073412468___703207072719__">Colin Moy</a>
+                        <a href="https://colin-moy.webflow.io/?utm_source=google&utm_medium=search&utm_campaign=SS-GoogleSearch-Nonbrand-DynamicSearchAds-Tier4&utm_term=dsa-1729073412468___703207072719__" class="u-url">Colin Moy</a>
                         Colin Moy's portfolio website is simplistic, creative and interactive. The creative ways to keep the user/viewer engaged. The one thing that I don't like the colour palette. <br>
-                        <a href="https://www.karliskah.com/">Karlis Kah</a>
+                        <a href="https://www.karliskah.com/" class="u-url">Karlis Kah</a>
                         Kartliskah's portfolio is interactive and creative. I find creators who use interesting ways to keep the user engaged. The one thing I'm not very sure of is the footer, it's not very user friendly. <br>
-                        <a href="https://side-scroller-8d0b7d196792c04b8abe98e11.webflow.io/?utm_source=google&utm_medium=search&utm_campaign=SS-GoogleSearch-Nonbrand-DynamicSearchAds-Tier4&utm_term=dsa-1729073412468___703207072719__">‍Aaron Grieve'</a>
+                        <a href="https://side-scroller-8d0b7d196792c04b8abe98e11.webflow.io/?utm_source=google&utm_medium=search&utm_campaign=SS-GoogleSearch-Nonbrand-DynamicSearchAds-Tier4&utm_term=dsa-1729073412468___703207072719__" class="u-url">‍Aaron Grieve'</a>
                         Aaron's website something I don't happen to personally be fond of. It doesn't seem very user-friendly, and intuitive. The colour palette is very light, and contrasting but it's very harsh on the eyes. <br>
 
                     </p>
 
                     <p>
                         <h3>References</h3>
-                        CareerFoundry. (2019). 32 UI Elements Designers Need To Know: 2025 Guide. [online] Available at: <a href="https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/"> https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/ </a>[Accessed 16 Mar. 2025]. <br>
-                        Fungies (2023). Short Guide to Building Game Designer Portfolio - Fungies.io. [online] Fungies.io - Sell digital products seamlessly. Available at: <a href="https://fungies.io/short-guide-to-building-game-designer-portfolio/">https://fungies.io/short-guide-to-building-game-designer-portfolio/ </a>[Accessed 2 Mar. 2025]. <br>
-                        Moritz Prätorius (2024). Game Designer Portfolio Website Examples (Best Of). [online] Slider Revolution. Available at:<a href="https://www.sliderrevolution.com/design/game-designer-portfolio-website/"> https://www.sliderrevolution.com/design/game-designer-portfolio-website/ </a>[Accessed 2 Mar. 2025].<br>
+                        CareerFoundry. (2019). 32 UI Elements Designers Need To Know: 2025 Guide. [online] Available at: <a href="https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/" class="u-url"> https://careerfoundry.com/en/blog/ui-design/ui-element-glossary/ </a>[Accessed 16 Mar. 2025]. <br>
+                        Fungies (2023). Short Guide to Building Game Designer Portfolio - Fungies.io. [online] Fungies.io - Sell digital products seamlessly. Available at: <a href="https://fungies.io/short-guide-to-building-game-designer-portfolio/" class="u-url">https://fungies.io/short-guide-to-building-game-designer-portfolio/ </a>[Accessed 2 Mar. 2025]. <br>
+                        Moritz Prätorius (2024). Game Designer Portfolio Website Examples (Best Of). [online] Slider Revolution. Available at:<a href="https://www.sliderrevolution.com/design/game-designer-portfolio-website/" class="u-url"> https://www.sliderrevolution.com/design/game-designer-portfolio-website/ </a>[Accessed 2 Mar. 2025].<br>
                     </p>
 
             </article>
