--- a/Blogs/blog_week_1.html
+++ b/Blogs/blog_week_1.html
@@ -27,7 +27,7 @@
         <main>
             <article>
 
-                <h1>Week 1 Blog Post</h1>
+                <h1 class="p-name">Week 1 Blog Post</h1>
                 <h3> Setting up GitHub and publishing Pages.</h3>
                     <p>The process was relatively smooth, save for some hiccups. 
                     The first time I tried setting up my page and publishing it to GitHub, I then opened the link, only to find "Error 404.". 
