--- a/Blogs/blog_week_4.html
+++ b/Blogs/blog_week_4.html
@@ -35,11 +35,11 @@
                             There are ideas and variations for some aspects in the style-guide:
                             <figure>
                                 <figcaption> style guide image (1) showing fonts, moodboard inspiration and logo variations</figcaption>
-                                <img src="../Images/blog_week_4(01).png" alt="style guide img (1) showing fonts, moodboard inspiration and logo variations">
+                                <img class="u-photo" src="../Images/blog_week_4(01).png" alt="style guide img (1) showing fonts, moodboard inspiration and logo variations">
                             </figure>
                             <figure>
                                 <figcaption> style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website</figcaption>
-                                <img src="../Images/blog_week_4(02).png" alt="style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website">
+                                <img class="u-photo" src="../Images/blog_week_4(02).png" alt="style guide img (2) showing colour palette, button ideas and mockup image of the idea of the website">
                             </figure>
                         </p>
 
