--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -20,15 +20,15 @@
         </header>
 
         <main>
-            <h1>About me</h1>
+            <h1 class="p-name" >About me</h1>
                 <p>
                     <figure>
                         <figcaption>That's me!</figcaption>
-                        <img src="../Images/profile_avatar.png" alt="A avatar of me" width="300" height="300">
+                        <img class="u-photo" src="../Images/profile_avatar.png" alt="A avatar of me" width="300" height="300">
                     </figure>
                     
                 </p>
-                <p>
+                <p class="p-name">
                     I'm Amina Moosa. A 3rd year Digital Arts student at Wits. 
                     I'm currently majoring in Game Design and Interactive Media.
                     Follow along for more updates on my web portfolio.
