--- a/Blogs/blog_week_2.html
+++ b/Blogs/blog_week_2.html
@@ -25,7 +25,7 @@
         
         <main>
             <article>
-                <h1>Blog Post Week 2</h1>
+                <h1 class="p-name">Blog Post Week 2</h1>
                     <h3>Reflecting "<cite>You Say You Want a Revolution? Hypertext and the Laws of Media</cite>" (2003) by Moulthrop and how it speak to the internet today </h3>
                         <p> 
                             "<cite>You Say You Want a Revolution? Hypertext and the Laws of Media</cite>" was an essay by Stuart Moulthrop originally published in 1991
@@ -64,7 +64,7 @@
                         </p>
 
                     <h2>Additional Stuff:</h2>
-                        <h3>Discussing my folder structure and URL scheme, and outlining my decision-making.</h3>
+                        <h3 class="p-name">Discussing my folder structure and URL scheme, and outlining my decision-making.</h3>
                         <p>
                             Below is an image demonstrating my folder structure. The reason for this is to organize where content goes and 
                             to make it more readable on the URL. I used simple descriptive words and did not use any ASCII characters so that it would be easier 
