--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -25,7 +25,7 @@
 
         <main>
             <article>
-                <h3>Week 3 Blog</h3>
+                <h3 class="p-name">Week 3 Blog</h3>
                     <p>Working through the slides for Interaction Design (Geyser, 2023) for the web, define and discuss 
                         your user alignment, and map out your site's content, experience, and interface elements.</p>
 
