--- a/Designs/web_style_group_project.html
+++ b/Designs/web_style_group_project.html
@@ -20,11 +20,11 @@
         <nav>
             <a href="designs.html">Main Designs Page</a>
             <a>Group Project</a>
-            <a href="web_style_guide_mapping.html">Style Guide</a>
+            <a class="u=url" href="web_style_guide_mapping.html">Style Guide</a>
         </nav>
 
         <main>
-            <h1>Web Style Guide Group Project</h1>
+            <h1 class="p-name">Web Style Guide Group Project</h1>
             <p>
                 Creating a style guide for a afro manga company
             </p>
@@ -44,7 +44,7 @@
                 <img src="../Images/Designs/Web_Style_Guide_Group_Project/13.jpg" alt="Img 13 for Web Style Guide group project" height="600" width="1440">
             </p>
 
-            <p>
+            <p class="p-name">
                 Team:
                 <ul>
                     <li>Jordyn Van Aswegen</li>
