--- a/Designs/web_style_guide_mapping.html
+++ b/Designs/web_style_guide_mapping.html
@@ -109,6 +109,15 @@
                     </p>
 
                     <p>
+                        <h3 class="p-name">Colour Choices</h3>
+                        Regarding contrast between values of hex colour value #045782 (foreground) and #b5d4ed (background): <br>
+                        The contrast ration is 5, and it it's a pass on normal text, large text and graphical objects and user interface components.
+                        <img class="u-photo" src="../Images/Designs/Web_Style_Guide/contrast checker.png" alt="contrast checker image screenshot" >
+
+
+                    </p>
+
+                    <p>
                         <h3>References Material</h3>
                         <a href="https://colin-moy.webflow.io/?utm_source=google&utm_medium=search&utm_campaign=SS-GoogleSearch-Nonbrand-DynamicSearchAds-Tier4&utm_term=dsa-1729073412468___703207072719__" class="u-url">Colin Moy</a>
                         Colin Moy's portfolio website is simplistic, creative and interactive. The creative ways to keep the user/viewer engaged. The one thing that I don't like the colour palette. <br>
