--- a/index.html
+++ b/index.html
@@ -20,8 +20,16 @@
         </header>
         
         <main>
-            <h1>Stay tuned for more!</h1> 
-                <h3>Check out the blogs while you're here</h3>
+            <h1>Hakuna Matata</h1> 
+                <p>
+                    Welcome to my portfolio — where I pretend I know what I’m doing, and you pretend you believe me. Let’s make this awkward moment worth it. <br>
+                    Stay tuned for more!
+                    
+                </p>
+
+                <p>
+                    <h3>Check out the blogs while you're here</h3>
+                </p>
         </main>
 
         <footer>
