--- a/Portfolio/portfoli.html
+++ b/Portfolio/portfoli.html
@@ -20,8 +20,11 @@
         </header>
 
         <main>
-            <h1> My portfolio of thingsss</h1>
-            <h3>Stick around and you may find them here!</h3>
+            <h1 class="h-entry p-name"> My portfolio of thingsss</h1>
+            
+            <article class="e-content">
+            <h3 class="p-summary">Stick around and you may find them here!</h3>
+            </article>
         </main>
         
         <footer>
