--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
         </header>
         
         <main>
-            <h1>Hakuna Matata</h1> 
-                <p>
+            <h1 class="p-name">Hakuna Matata</h1> 
+                <article class="h-entry e-content">
+                <p class="p-summary">
                     Welcome to my portfolio — where I pretend I know what I’m doing, and you pretend you believe me. Let’s make this awkward moment worth it. <br>
                     Stay tuned for more!
                     
@@ -30,6 +31,7 @@
                 <p>
                     <h3>Check out the blogs while you're here</h3>
                 </p>
+            </article>
         </main>
 
         <footer>
