--- a/Designs/design_week_5.html
+++ b/Designs/design_week_5.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Style Guide Mapping</title>
+    <title>Week 5</title>
     <meta name="author" content="Amina Moosa">
     <meta name="description" content="Design Process and Documentation of IxD Process">
 </head>
@@ -17,9 +17,10 @@
             <a href="../Profile/profile.html">Profile</a>
         </header>
             <nav>
-                <a href="designs.html">Main Designs Page</a>
+                <a href="designs.html">Designs</a>
                 <a href="web_style_group_project.html">Group Project</a>
-                <a>Style Guide</a>
+                <a>Week 5</a>
+                <a href="design_week_6.html">Week 6</a>
             </nav>
 
         <main>
