--- a/Designs/designs.html
+++ b/Designs/designs.html
@@ -17,9 +17,10 @@
                 <a href="../Profile/profile.html">Profile</a>
         </header>
         <nav>
-            <a>Main Designs Page</a>
+            <a>Designs</a>
             <a href="web_style_group_project.html">Group Project</a>
-            <a href="web_style_guide_mapping.html">Style Guide</a>
+            <a href="design_week_5.html">Week 5</a>
+            <a href="design_week_6.html">Week 6</a>
         </nav>
 
         <main>
