--- a/Designs/web_style_group_project.html
+++ b/Designs/web_style_group_project.html
@@ -18,9 +18,10 @@
             <a href="../Profile/profile.html">Profile</a>
         </header>
         <nav>
-            <a href="designs.html">Main Designs Page</a>
+            <a href="designs.html">Designs</a>
             <a>Group Project</a>
-            <a class="u=url" href="web_style_guide_mapping.html">Style Guide</a>
+            <a class="u=url" href="design_week_5.html">Week 5</a>
+            <a href="design_week_6.html">Week 6</a>
         </nav>
 
         <main>
