--- a/Blogs/blog.html
+++ b/Blogs/blog.html
@@ -8,11 +8,13 @@
     <meta name="description" content="The blog page that contains the links to all the blogs">
 </head>
     <body>
+
+
         <a href="../index.html">Home</a>
         <a>Blogs</a> 
         <a href="../Designs/designs.html">Designs</a>
         <a href="../Essays/essay.html">Essays</a> 
-        <a href="../Portfolio/portfoli.html">Portfolio</a>
+        <a href="../Portfolio/portfolio.html">Portfolio</a>
         <a href="../Profile/profile.html">Profile</a>
         <br>
         <br>
@@ -20,6 +22,8 @@
         <a href="blog_week_2.html">Week 2</a>
         <a href="blog_week_3.html">Week 3</a>
         <a href="blog_week_4.html">Week 4</a>
+        <a href="../Designs/design_week_5.html">Week 5</a>
+        <a href="../Designs/design_week_6.html">Week 6</a>
 
         
         <h1 class="p-name h-entry">Blogs</h1>
