--- a/Blogs/blog_week_3.html
+++ b/Blogs/blog_week_3.html
@@ -13,7 +13,7 @@
             <a href="blog.html">Blogs</a> 
             <a href="../Designs/designs.html">Designs</a>
             <a href="../Essays/essay.html">Essays</a> 
-            <a href="../Portfolio/portfoli.html">Portfolio</a>
+            <a href="../Portfolio/portfolio.html">Portfolio</a>
             <a href="../Profile/profile.html">Profile</a>
         </header>
             <nav>
@@ -21,6 +21,9 @@
                 <a href="blog_week_2.html">Week 2</a>
                 <a>Week 3</a>
                 <a href="blog_week_4.html">Week 4</a>
+                <a href="../Designs/design_week_5.html">Week 5</a>
+                <a href="../Designs/design_week_6.html">Week 6</a>
+                <a href="blog_week_7.html">Week 7</a>
             </nav>
 
         <main>
