--- a/Designs/web_style_group_project.html
+++ b/Designs/web_style_group_project.html
@@ -14,7 +14,7 @@
             <a href="../Blogs/blog.html">Blogs</a> 
             <a>Designs</a>
             <a href="../Essays/essay.html">Essays</a> 
-            <a href="../Portfolio/portfoli.html">Portfolio</a>
+            <a href="../Portfolio/portfolio.html">Portfolio</a>
             <a href="../Profile/profile.html">Profile</a>
         </header>
         <nav>
