--- a/Essays/essay.html
+++ b/Essays/essay.html
@@ -14,7 +14,7 @@
                 <a href="../Blogs/blog.html">Blogs</a> 
                 <a href="../Designs/designs.html">Designs</a>
                 <a>Essays</a> 
-                <a href="../Portfolio/portfoli.html">Portfolio</a>
+                <a href="../Portfolio/portfolio.html">Portfolio</a>
                 <a href="../Profile/profile.html">Profile</a>
             </nav>
         </header>
