--- a/Profile/profile.html
+++ b/Profile/profile.html
@@ -15,7 +15,7 @@
                 <a href="../Blogs/blog.html">Blogs</a> 
                 <a href="../Designs/designs.html">Designs</a>
                 <a href="../Essays/essay.html">Essays</a> 
-                <a href="../Portfolio/portfoli.html">Portfolio</a>
+                <a href="../Portfolio/portfolio.html">Portfolio</a>
                 <a>Profile</a>
             </nav>
 
