--- a/Blogs/blog_week_7.html
+++ b/Blogs/blog_week_7.html
@@ -29,7 +29,7 @@
 
             <main>
                 <article class="h-entry">
-                    <h1 class="p-name">Blog Post Week 4</h1>
+                    <h1 class="p-name">Week 7 Blog Post</h1>
                     <p>
                         by 
                         <a class="p-author h-card" href="../Profile/profile.html">Amina Moosa</a>
@@ -37,8 +37,8 @@
                     </p>
                     <div class="e-content">
 
-                        <h1>Week 7 Blog Post</h1>
-                            <h2>Dis-chem</h2>
+                        
+                            <h2 class="p-name">Dis-chem</h2>
                                 <p>Accessible here: <a href="https://www.dischem.co.za/dev-area/new-categories/beauty/skincare">https://www.dischem.co.za/dev-area/new-categories/beauty/skincare</a></p>
 
                                 <p>
@@ -54,7 +54,7 @@
                                 </p>
 
                                 <p>
-                                    Cons:
+                                    Cons:<br>
                                     The alignment of content is not very consistent. 
                                     This can be seen on the HomePage, which showcases the Easter specials as well. 
                                     The ad block pictures are of various sizes, but do not have a coherent layout, 
@@ -66,7 +66,7 @@
                                     Some of the images cuts out the text above slightly, also adding to a more challenging to read user interface.
                                 </p>
 
-                                <h2>TicketPro</h2>
+                                <h2 class="p-name">TicketPro</h2>
                                 <p>Available here: <a href="https://www.ticketpro.co.za/">https://www.ticketpro.co.za/</a></p>
 
                                 <p>
@@ -89,8 +89,9 @@
                                     <!--Screenshot images-->
                                 </p>
 
+                                
+                                <h2 class="p-name">References:</h2>
                                 <p>
-                                    References:<br>
                                     Joannb.com. (2017). Jo. [online] Available at: <a href="https://joannb.com/portfolio-dischem.html">https://joannb.com/portfolio-dischem.html</a>. [Accessed 31 Mar. 2025].
                                 </p>
 
